# lep

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  registry.toml
.github/workflows/: ci.yml  release.yml
src/: command.rs  emulator.rs  lib.rs  main.rs  pty.rs
